--- a/public/css/question.css
+++ b/public/css/question.css
@@ -2045,34 +2045,31 @@ padding: 2% 0px 50px 80px;}
     display: inline-block;
 
 }
-
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
+    font-family: "Quicksand";
     background-color: #888888;
     color: #fff;
-    font-family: "Quicksand";
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    bottom: 150%;
-    left: 50%;
-    margin-left: -60px;
+    top: -5px;
+    left: 150%;
 }
 
 .tooltip .tooltiptext::after {
     content: "";
     position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: #888888 transparent transparent transparent;
+    border-color: transparent #888888 transparent transparent;
 }
-
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
